# ast_names

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
ast_names/: __init__.py  _main.py
tests/: test_ast_names.py
