[metadata]
name = ast_names
version = 0.1.0
description = Collect top level variable names using the ast.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tjsmart/ast_names
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.package_data]
ast_names =
    py.typed

[bdist_wheel]
universal = True

[flake8]
max-line-length = 120
